--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_time_attack">TimeAttack</string>
+    <string name="title_activity_tiempo">Tiempo</string>
+    <string name="title_activity_play_time_attack">PlayTimeAttack</string>
 </resources>
