--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_time_attack">TimeAttack</string>
     <string name="title_activity_tiempo">Tiempo</string>
     <string name="title_activity_play_time_attack">PlayTimeAttack</string>
+    <string name="title_activity_resultados">Resultados</string>
 </resources>
