--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_tiempo">Tiempo</string>
     <string name="title_activity_play_time_attack">PlayTimeAttack</string>
     <string name="title_activity_resultados">Resultados</string>
+    <string name="title_activity_revision">Revision</string>
 </resources>
