Primera prueba de navegacion entre preguntas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_time_attack">TimeAttack</string>
     <string name="title_activity_tiempo">Tiempo</string>
-    <string name="title_activity_play_time_attack">Ensayo !</string>
+    <string name="title_activity_play_time_attack">Ensayo</string>
     <string name="title_activity_resultados">Resultados</string>
     <string name="title_activity_revision">Revision</string>
 </resources>
