--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">PreuVirtual</string>
     <string name="close_title">¿Estás seguro que quieres cerrar el ensayo?</string>
     <string name="close_message">Se perderán los datos del ensayo actual</string>
+    <string name="finish_title">¿Ya terminaste?</string>
+    <string name="finish_message">Si ya terminaste, revisa tus resultados ;)</string>
     <string name="aceptar">Si</string>
     <string name="cancelar">No</string>
     <string name="hello_world">Hello world!</string>
