Cambio de idioma de botones. Cambio de titulo de activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,12 @@
     <string name="close_title">¿Estás seguro que quieres cerrar el ensayo?</string>
     <string name="close_message">Se perderán los datos del ensayo actual</string>
     <string name="finish_title">¿Ya terminaste?</string>
-    <string name="finish_message">Si ya terminaste, revisa tus resultados ;)</string>
+    <string name="finish_message">Si ya terminaste, veamos tus resultados :)</string>
     <string name="aceptar">Si</string>
     <string name="cancelar">No</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_time_attack">TimeAttack</string>
-    <string name="title_activity_tiempo">Tiempo</string>
-    <string name="title_activity_play_time_attack">Ensayo</string>
+    <string name="title_activity_time_attack">Cuenta Regresiva</string>
+    <string name="title_activity_tiempo">Cuenta Regresiva</string>
+    <string name="title_activity_play_time_attack">Cuenta Regresiva</string>
     <string name="title_activity_resultados">Resultados</string>
-    <string name="title_activity_revision">Revision</string>
-    <string name="title_activity_preg_revision">PregRevision</string>
+    <string name="title_activity_revision">Revisión</string>
 </resources>
